--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             <div class="hero__subtitle">
                 Онлайн школа уроков английского языка для людей любых возрастов.
             </div>
-            <button class="btn hero-btn">
+            <a href="buy" class="btn hero-btn" >
                 Записаться на курс
-            </button>
+            </a>
         </div>
         <div class="hero__wrapper"></div>
     </div>
@@ -1001,7 +1001,7 @@
 </section>
         <section class="course" id="Application">
     <div class="container">
-        <div class="course__content">
+        <div class="course__content" id="buy">
 
             <div class="course__left">
                 <div class="course__title">
