--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="hero__subtitle">
                 Онлайн школа уроков английского языка для людей любых возрастов.
             </div>
-            <a href="buy" class="btn hero-btn" >
+            <a href="#buy" class="btn hero-btn" >
                 Записаться на курс
             </a>
         </div>
