--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 Ирина Лайм
             </div>
             <div class="teach__work">
-                преподаватель по робототехнике
+                Преподаватель английского.
             </div>
             <button type="button" class="btn-info btn-primary" data-bs-toggle="modal" data-bs-target="#teach-1">
                 Подробнее
@@ -234,7 +234,7 @@
                 Марина Орлова
             </div>
             <div class="teach__work">
-                преподаватель по робототехнике
+                Преподаватель английского.
             </div>
             <button type="button" class="btn-info btn-primary" data-bs-toggle="modal" data-bs-target="#teach-2">
                 Подробнее
@@ -248,7 +248,7 @@
                 Максим Петров
             </div>
             <div class="teach__work">
-                преподаватель по программированию
+                Преподаватель английского.
             </div>
             <button type="button" class="btn-info btn-primary" data-bs-toggle="modal" data-bs-target="#teach-3">
                 Подробнее
@@ -262,7 +262,7 @@
                 Константин Назаров
             </div>
             <div class="teach__work">
-                преподаватель по робототехнике
+                Преподаватель английского.
             </div>
             <button type="button" class="btn-info btn-primary" data-bs-toggle="modal" data-bs-target="#teach-4">
                 Подробнее
@@ -276,7 +276,7 @@
                 Лиза Весенняя
             </div>
             <div class="teach__work">
-                преподаватель по программированию
+                Преподаватель английского.
             </div>
             <button type="button" class="btn-info btn-primary" data-bs-toggle="modal" data-bs-target="#teach-5">
                 Подробнее
@@ -314,7 +314,7 @@
                             Ирина Лайм
                         </div>
                         <div class="teach__work">
-                            преподаватель по программированию
+                            Преподаватель английского.
                         </div>
                         <ul class="social" title="">
                             <li class="social__item"><a href="#" target="_blank" class="social__link social__link--fb"
@@ -387,7 +387,7 @@
                             Марина Орлова
                         </div>
                         <div class="teach__work">
-                            преподаватель по программированию
+                            Преподаватель английского.
                         </div>
                         <ul class="social" title="">
                             <li class="social__item"><a href="#" target="_blank" class="social__link social__link--fb"
@@ -471,7 +471,7 @@
                             Максим Петров
                         </div>
                         <div class="teach__work">
-                            преподаватель по программированию
+                            Преподаватель английского.
                         </div>
                         <ul class="social" title="">
                             <li class="social__item"><a href="#" target="_blank" class="social__link social__link--fb"
@@ -555,7 +555,7 @@
                             Константин Назаров
                         </div>
                         <div class="teach__work">
-                            преподаватель по программированию
+                            Преподаватель английского.
                         </div>
                         <ul class="social" title="">
                             <li class="social__item"><a href="#" target="_blank" class="social__link social__link--fb"
@@ -632,7 +632,7 @@
                             Лиза Весенняя
                         </div>
                         <div class="teach__work">
-                            преподаватель по программированию
+                            Преподаватель английского.
                         </div>
                         <ul class="social" title="">
                             <li class="social__item"><a href="#" target="_blank" class="social__link social__link--fb"
@@ -1035,7 +1035,7 @@
     <footer class="footer">
     <div class="footer__content">
         <div class="footer__left">
-            <div class="footer__title">APPLE.SCHOOL</div>
+            <a href="#" class="footer__title">APPLE.SCHOOL</a>
             <div class="footer__subtitle">
                 © APPLE.SCHOOL
             </div>
